@@ -28,7 +28,7 @@
  ** 									     ** 
  ** ************************************************************************ **/
 
-static char Id[] = "@(#)$Id: ModuleCmd_Load.c,v 1.8.4.2 2010/11/11 18:58:32 rkowen Exp $";
+static char Id[] = "@(#)$Id: ModuleCmd_Load.c,v 1.8.4.3 2011/10/03 19:31:52 rkowen Exp $";
 static void *UseId[] = { &UseId, Id };
 
 /** ************************************************************************ **/
@@ -149,7 +149,8 @@ int	ModuleCmd_Load(	Tcl_Interp	*interp,
 	 **  Create a Tcl interpreter and initialize it with the module commands
 	 **/
 
-        tmp_interp = Tcl_CreateInterp();
+        tmp_interp = EM_CreateInterp();
+
 	if( TCL_OK != (return_val = InitializeModuleCommands( tmp_interp)))
 	    return( return_val);	/** -------- EXIT (FAILURE) -------> **/
         filename[0] = '\0';
@@ -268,7 +269,7 @@ int	ModuleCmd_Load(	Tcl_Interp	*interp,
 		break;	/* switch */
 	    }
 	}
-        Tcl_DeleteInterp(tmp_interp);
+        EM_DeleteInterp(tmp_interp);
 
 	/* do not process any further modulefiles if EM_EXIT */
 	if (em_return_val == EM_EXIT) break; /* for */
