@@ -26,7 +26,7 @@
  ** 									     ** 
  ** ************************************************************************ **/
 
-static char Id[] = "@(#)$Id: ModuleCmd_Purge.c,v 1.3.22.1 2010/11/11 18:23:18 rkowen Exp $";
+static char Id[] = "@(#)$Id: ModuleCmd_Purge.c,v 1.3.22.2 2011/10/03 19:31:52 rkowen Exp $";
 static void *UseId[] = { &UseId, Id };
 
 /** ************************************************************************ **/
@@ -108,9 +108,7 @@ int	ModuleCmd_Purge(	Tcl_Interp	*interp,
      **  Get the list of currently loaded modules from the environment variable
      **  LOADEDMODULES
      **/
-    if( NULL == (loaded_modules =
-	(char *) Tcl_GetVar2( interp, "env", "LOADEDMODULES",
-	TCL_GLOBAL_ONLY))) {
+    if(!(loaded_modules = TclGetEnv( interp, "LOADEDMODULES"))) {
 	    /* nothing to do */
 	    return( TCL_OK);		/** ---- EXIT (Nothing to list) ---- **/
     }
