@@ -8,6 +8,8 @@
 ****************************   Release 3.2 ******************************
 Modules 3.2.9
 	* Fix the coexistence of load/remove flags (Martin Siegert)
+	* Fixed an overlapping string copy (Wilson Snyder & Orion Poplawski)
+	* Isolated calls to the new interpreter and get & set env.vars.
 
 Modules 3.2.8
 Oct  1, 2010				R.K. Owen (rk@owen.sj.ca.us)
